--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <h1 class="page-title">
     <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
-    Drew DeVault's Blog
+   Deryk Makgill's Website
 </h1>
 
 <div class="content">
