--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ and I use it frequently in my daily workflow.</em></p>
 </div>
 <div class="sidebar">
     <hr class="visible-xs" />
-    <img class="avatar" src="/avatar-148.jpg" alt="Drew DeVault's avatar" />
+    <img class="avatar" src="https://drewdevault.com/avatar-148.jpg" alt="Drew DeVault's avatar" />
     <p>I write software. Occasionally, I will compose a post for this blog.</p>
     <div class="external-links">
       <p>
