--- a/notes.html
+++ b/notes.html
@@ -22,7 +22,11 @@ title: Notes
  <span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em;">↳ In reply to <a href="{{ notes.reply | relative_url }}" class="u-in-reply-to h-cite">{{ notes.reply }}</a></span>
   {% endif %}
  
- <p class="p-content"> {{ notes.content }}
+ <p class="p-content"> 
+   {% if include.notes._url or include.no_excerpt %}
+    {% else %}
+    {{ include.notes.excerpt }}
+    {% endif %}
  </p>
  
    {% if notes.image %}
