--- a/notes.html
+++ b/notes.html
@@ -19,7 +19,7 @@ title: Notes
    </a></h5>
 
      {% if notes.reply %}
- <span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em;">↳ In reply to <a href="{{ notes.reply | relative_url }}" class="u-in-reply-to h-cite">{{ notes.reply }}</a></span>
+ <span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em; line-break:anywhere;">↳ In reply to <a href="{{ notes.reply | relative_url }}" class="u-in-reply-to h-cite">{{ notes.reply }}</a></span>
   {% endif %}
  
  <p class="p-content"> 
