--- a/stream.html
+++ b/stream.html
@@ -3,21 +3,12 @@ layout: page
 title: Stream
 ---
 
-{% for item in paginator.posts %}
-<article class="pa3 mb3 ba br-round b--divider | h-entry">
-  <div class="flex-ns">
-    {% if item.collection == "notes" %}
-      {% include notes.html %}
-    {% elsif item.collection == "replies" %}
-      {% include replies.html %}
-    {% endif %}
-  </div>
-
-  <footer>{% webmention_count page.url %}</footer>
-
-</article>
+{% for item in site.collection limit:6 | sort: 'date' %}
+    <li>
+        <a href="{{ item.url }}">
+             <img src="{{ item.thumb }} " alt="">
+            </figure>
+            <p>{{ item.title }}</p>
+        </a>
+    </li>
 {% endfor %}
-
-</section>
-
-{% include item-pagination.html %}
