--- a/stream.html
+++ b/stream.html
@@ -4,7 +4,7 @@ title: Stream
 ---
 
 
-{% assign documents = site.documents | where: 'layout', note | sort: 'date' | reverse %}
+{% assign documents = site.documents | where: 'layout', note, reply, post | sort: 'date' | reverse %}
 
 {% for document in documents limit:10 %}
   <entry>
